[tool.poetry]
authors = [
    "thautwarm <twshere@outlook.com>"
]
description = "A proposal Fable Python package manager"
repository = "https://github.com/thautwarm/reflect"
version = "0.1.2"
name = "pykg-manager"

packages = [
    { include = "pykg" },
    { include = "_tbnf" },
]

readme = "README.md"

license = "MIT"

classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.8.0"
z3-solver = "^4.8.14"
loguru = "^0.5.3"
typing-extensions = "^4.0.1"
lark = "^0.11.3"
tomli-w = "^1.0.0"
diskcache = "^5.4.0"
dulwich = "^0.20.30"
wisepy2 = "^1.2.1"

[tool.poetry.scripts]
pykg = 'pykg.cli_apis:main'

